<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_movie_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/CircularImageView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Interstellar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_screening_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/red"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_time"
                tools:text="15:00- 19:00" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_seats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/seats"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_screening_time" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_screening_seats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/red"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_seats"
                tools:text="A3,A4,A6" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/prince"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_screening_seats" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_screening_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/red"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_price"
                tools:text="100" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_price_vallute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/lari"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_screening_price"
                app:layout_constraintStart_toEndOf="@+id/tv_screening_price"
                app:layout_constraintTop_toTopOf="@+id/tv_screening_price" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_swipe_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:alpha="0.7"
        android:text="@string/swipe_to_delete"
        android:textColor="#757575"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_movie" />

</androidx.constraintlayout.widget.ConstraintLayout>